# lazycoder

./: .gitignore  CLAUDE.md  README.md  config.example.yaml  config.yaml  demo_swe_agent.py  pyproject.toml
src/lazycoder/: budget.py  config.py  conversation_store.py  executor.py  github_client.py  main.py  models.py  planner.py  rate_limiter.py  run_log.py  run_tracker.py  scheduler.py  summarizer.py  triage.py
tests/: test_scheduler.py
